--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 <body>
     <main class="main">
-        
+        <div class="container">
+            <header class="header">
+                <a href="#" class="logo">
+                    <img src="img/logo.svg" alt="Open Movie API">
+                </a>
+                <nav class="header-nav">
+                    <a href="#" class="header-nav__link">Пример API</a>
+                    <a href="#" class="header-nav__link">Тарифы</a>
+                    <a href="#" class="header-nav__link">Поддержка</a>
+                </nav>
+            </header>
+        </div>
     </main>
 </body>
 </html>
