--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <main class="main">
         <div class="container">
             <header class="header">
-                <a href="#" class="logo">
+                <a href="#" class="logo link-opacity">
                     <img src="img/logo.svg" alt="Open Movie API">
                 </a>
                 <nav class="header-nav">
-                    <a href="#" class="header-nav__link">Пример API</a>
-                    <a href="#" class="header-nav__link">Тарифы</a>
-                    <a href="#" class="header-nav__link">Поддержка</a>
+                    <a href="#" class="header-nav__link link-underline">Пример API</a>
+                    <a href="#" class="header-nav__link link-underline">Тарифы</a>
+                    <a href="#" class="header-nav__link link-underline">Поддержка</a>
                 </nav>
             </header>
         </div>
