--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css" />
 
-    <title>Open Movie API</title>
-</head>
-<body>
-    <main class="main">
-        <div class="container">
-            <header class="header">
-                <a href="#" class="logo link-opacity">
-                    <img src="img/logo.svg" alt="Open Movie API">
-                </a>
-                <nav class="header-nav">
-                    <a href="#" class="header-nav__link link-underline">Пример API</a>
-                    <a href="#" class="header-nav__link link-underline">Тарифы</a>
-                    <a href="#" class="header-nav__link link-underline">Поддержка</a>
-                </nav>
-            </header>
-        </div>
-    </main>
-</body>
+		<title>Open Movie API</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="header-inner container">
+				<a href="#" class="logo link-opacity">
+					<img src="img/logo.svg" alt="Open Movie API" />
+				</a>
+				<nav class="header-nav">
+					<a href="#" class="header-nav__link link-underline"
+						>Пример API</a
+					>
+					<a href="#" class="header-nav__link link-underline"
+						>Тарифы</a
+					>
+					<a href="#" class="header-nav__link link-underline"
+						>Поддержка</a
+					>
+				</nav>
+			</div>
+		</header>
+	</body>
 </html>
