--- a/index.html
+++ b/index.html
@@ -28,5 +28,58 @@
 				</nav>
 			</div>
 		</header>
+		<main class="main">
+			<div class="container">
+				<section class="hero">
+					<h1 class="hero-title">Свободная база фильмов</h1>
+					<p class="hero-description">
+						Получайте максимум данных о фильмах, сериалах,
+						мультфильмах, тв-шоу, аниме, актерах и режиссерах
+						максимально быстро. Наше api содержит данные из таких
+						баз как: kinopoisk, tmbd, imdb
+					</p>
+                    <a href="#" class="link-gradient">
+                        <div class="overlay">
+                            <span>Подключить</span>
+                            <span>Подключить</span>
+                        </div>
+                    </a>
+				</section>
+				<section class="example">
+					<h2 class="section-title">Пример работы</h2>
+					<div class="example-block section-block">
+						<div class="example-top">
+							<h3 class="example-top__title">Однажды в голливуде</h3>
+							<ul class="example-top__list">
+								<li>ID: <span>1209712</span></li>
+								<li>Рейтинг КП: <span>5.7</span></li>
+								<li>Рейтинг IMDB: <span>5.3</span></li>
+							</ul>
+						</div>
+						<div class="example-block__content">
+							<img src="img/films/5.png" alt="" class="example-block__img">
+							<ul class="example-block__list">
+								<li>Год: <span>2019</span></li>
+								<li>Страны: <span>США, Великобритания, Китай</span></li>
+								<li>Актёры: <span>Леонардо ДиКаприо, Брэд Питт, Марго Робби, Эмиль Хирш,Маргарет Куэлли, Тимоти Олифант</span></li>
+								<li>Слоган: <span>«The 9th Film from Quentin Tarantino»</span></li>
+								<li>Жанр: <span>драма, комедия</span></li>
+								<li>Премьера в мире: <span>21 мая 2019</span></li>
+								<li>Сборы в мире: <span>+ $231 872 331 = $372 711 080</span></li>
+							</ul>
+						</div>
+						<div class="example-block__footer">
+							<p class="example-block__description">
+								1969 год, золотой век Голливуда уже закончился. Известный актёр Рик Далтон и его дублер Клифф Бут пытаются найти свое место в стремительно меняющемся мире киноиндустрии.
+							</p>
+							<a href="#" class="link-gradient"><div class="overlay">
+								<span>Трейлер ---></span>
+								<span>Трейлер ---></span>
+							</div></a>
+						</div>
+					</div>
+				</section>
+			</div>
+		</main>
 	</body>
 </html>
