--- a/index.html
+++ b/index.html
@@ -32,24 +32,26 @@
 			<div class="container">
 				<section class="hero">
 					<h1 class="hero-title">Свободная база фильмов</h1>
-					<p class="hero-description">
+					<p class="section-description hero-description">
 						Получайте максимум данных о фильмах, сериалах,
 						мультфильмах, тв-шоу, аниме, актерах и режиссерах
 						максимально быстро. Наше api содержит данные из таких
 						баз как: kinopoisk, tmbd, imdb
 					</p>
-                    <a href="#" class="link-gradient">
-                        <div class="overlay">
-                            <span>Подключить</span>
-                            <span>Подключить</span>
-                        </div>
-                    </a>
+					<a href="#" class="link-gradient">
+						<div class="overlay">
+							<span>Подключить</span>
+							<span>Подключить</span>
+						</div>
+					</a>
 				</section>
 				<section class="example">
 					<h2 class="section-title">Пример работы</h2>
 					<div class="example-block section-block">
 						<div class="example-top">
-							<h3 class="example-top__title">Однажды в голливуде</h3>
+							<h3 class="example-top__title section-h3">
+								Однажды в голливуде
+							</h3>
 							<ul class="example-top__list">
 								<li>ID: <span>1209712</span></li>
 								<li>Рейтинг КП: <span>5.7</span></li>
@@ -57,25 +59,137 @@
 							</ul>
 						</div>
 						<div class="example-block__content">
-							<img src="img/films/5.png" alt="" class="example-block__img">
+							<img
+								src="img/films/5.png"
+								alt=""
+								class="example-block__img"
+							/>
 							<ul class="example-block__list">
 								<li>Год: <span>2019</span></li>
-								<li>Страны: <span>США, Великобритания, Китай</span></li>
-								<li>Актёры: <span>Леонардо ДиКаприо, Брэд Питт, Марго Робби, Эмиль Хирш,Маргарет Куэлли, Тимоти Олифант</span></li>
-								<li>Слоган: <span>«The 9th Film from Quentin Tarantino»</span></li>
+								<li>
+									Страны:
+									<span>США, Великобритания, Китай</span>
+								</li>
+								<li>
+									Актёры:
+									<span
+										>Леонардо ДиКаприо, Брэд Питт, Марго
+										Робби, Эмиль Хирш,Маргарет Куэлли,
+										Тимоти Олифант</span
+									>
+								</li>
+								<li>
+									Слоган:
+									<span
+										>«The 9th Film from Quentin
+										Tarantino»</span
+									>
+								</li>
 								<li>Жанр: <span>драма, комедия</span></li>
-								<li>Премьера в мире: <span>21 мая 2019</span></li>
-								<li>Сборы в мире: <span>+ $231 872 331 = $372 711 080</span></li>
+								<li>
+									Премьера в мире: <span>21 мая 2019</span>
+								</li>
+								<li>
+									Сборы в мире:
+									<span>+ $231 872 331 = $372 711 080</span>
+								</li>
 							</ul>
 						</div>
 						<div class="example-block__footer">
 							<p class="example-block__description">
-								1969 год, золотой век Голливуда уже закончился. Известный актёр Рик Далтон и его дублер Клифф Бут пытаются найти свое место в стремительно меняющемся мире киноиндустрии.
+								1969 год, золотой век Голливуда уже закончился.
+								Известный актёр Рик Далтон и его дублер Клифф
+								Бут пытаются найти свое место в стремительно
+								меняющемся мире киноиндустрии.
 							</p>
-							<a href="#" class="link-gradient"><div class="overlay">
-								<span>Трейлер ---></span>
-								<span>Трейлер ---></span>
-							</div></a>
+							<a href="#" class="link-gradient"
+								><div class="overlay">
+									<span>Трейлер ---></span>
+									<span>Трейлер ---></span>
+								</div></a
+							>
+						</div>
+					</div>
+				</section>
+				<section class="tariffs">
+					<h2 class="section-title">Тарифы</h2>
+					<p class="tariffs-description section-description">
+						За 3 года разработки API стало понятно, что он
+						используется для бизнеса и для обучения. Чтобы стать
+						более удобными теперь только 2 самых нужных тарифа.
+					</p>
+					<div class="tariffs-cards">
+						<div class="tariffs-item">
+							<div class="tariffs-item__overlay">
+								<h3 class="tariffs-item__title section-h3">
+									Обучение
+								</h3>
+								<p class="tariffs-item__description section-description">
+									Это тариф создан для некомерческого
+									использования API kinopoisk, tmdb и imdb с
+									целью обучения программированию. Идеален для
+									студентов :)
+								</p>
+								<ul class="tariffs-item__list">
+									<li>
+										Доступ ко всем методам API кинопоиска
+										(3000 запросов в сутки)
+									</li>
+									<li>Доступ к документации</li>
+									<li>Доступ исходному коду API</li>
+									<li>
+										Нельзя использовать в приватных
+										репозиториях
+									</li>
+									<li>Тех. поддержка в чате @dev_to_dev</li>
+									<li>&nbsp;</li>
+								</ul>
+								<a
+									href="#"
+									class="tariffs-item__button link-gradient without-gradient"
+								>
+									<div class="overlay">
+										<span>Получить токен</span>
+										<span>Получить токен</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="tariffs-item tariffs-item-popular">
+							<div class="tariffs-item__overlay">
+								<h3 class="tariffs-item__title section-h3">
+									Бизнес
+								</h3>
+								<p class="tariffs-item__description section-description">
+									Для этого тарифа доступен тестовый период,
+									который позволит вам не платить за апи во
+									время эксперементов. Поумолчанию этот период
+									длится 2 недели c момента активации тарифа,
+									после 2000 р. в месяц.
+								</p>
+								<ul class="tariffs-item__list">
+									<li>
+										Безлимитный доступ ко всем методам API
+									</li>
+									<li>Доступ к документации</li>
+									<li>Доступ исходному коду API</li>
+									<li>Возможность купить дамп базы</li>
+									<li>
+										Возможность развернуть свой личный
+										инстанс API
+									</li>
+									<li>Оперативная тех. поддержка</li>
+								</ul>
+								<a
+									href="#"
+									class="tariffs-item__button link-gradient"
+								>
+									<div class="overlay">
+										<span>Беслпатное демо</span>
+										<span>Беслпатное демо</span>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</section>
