--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@
 						</div>
 					</div>
 				</section>
+				<section class="community">
+					<h2 class="section-title">Сообщество</h2>
+					<div class="community-block section-block">
+						<div class="community-item">
+							<h3 class="community-item__title section-h3">
+								<img src="img/tg-icon.svg" alt="tg">
+								Telegram
+							</h3>
+							<p class="community-item__description section-description">
+								Присоединяйся в наше сообщество в telegram и получай круглосуточную помощь
+							</p>
+							<a href="#" class="community-item__link">Присоединиться</a>
+						</div>
+						<div class="community-item">
+							<h3 class="community-item__title section-h3">
+								<img src="img/github-icon.svg" alt="github">
+								Github
+							</h3>
+							<p class="community-item__description section-description">
+								Присоединяйся в наше сообщество в telegram и получай круглосуточную помощь
+							</p>
+							<a href="#" class="community-item__link">Присоединиться</a>
+						</div>
+					</div>
+				</section>
 			</div>
 		</main>
 	</body>
