--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="background">
-      <div class="background__noise"></div>
+      <canvas class="background__noise"></canvas>
       <svg
         width="1731"
         height="784"
@@ -320,5 +320,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
