refactor(background): optimize svg figure & optimize styles

--- a/index.html
+++ b/index.html
@@ -12,94 +12,90 @@
   <body>
     <div class="background">
       <canvas class="background__noise"></canvas>
-      <svg
-        width="1731"
-        height="784"
-        class="background__figures"
-        viewBox="0 0 1731 784"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        class=".rotate-scale-up"
-      >
-        <g filter="url(#filter0_f_96_551)">
-          <path
-            d="M851.044 369.351C752.455 544.011 1065.22 491.814 1204.86 461.831C1423.94 430.905 1578.37 226.944 1596.02 151.022C1613.67 75.1007 960.082 81.0777 1176.41 202.619C1392.73 324.161 1367.44 346.444 1329.28 358.513C1291.12 370.583 949.632 194.691 851.044 369.351Z"
-            fill="#00F0FF"
-            class="background__figure background__figure--1"
-          />
-          <path
-            d="M704.578 229.344C611.122 1.96467 979.833 -0.466778 1077.14 50.6308C1185.71 107.638 1345 -129.665 1378.57 -37.2977C1412.14 55.0696 1352.25 552.836 1134.6 293.403C916.943 33.9709 798.033 456.724 704.578 229.344Z"
-            fill="#0500FF"
-            class="background__figure background__figure--2"
-          />
-          <path
-            d="M308.695 -34.5904C205.178 -218.176 485.592 -93.8253 568.354 -35.2315C656.773 27.3679 605.865 177.122 646.789 230.86C687.712 284.597 147.814 322.957 267.75 178.683C387.685 34.4101 412.211 148.995 308.695 -34.5904Z"
-            fill="#BD00FF"
-            class="background__figure background__figure--3"
-          />
-        </g>
-        <g style="mix-blend-mode: color-dodge" filter="url(#filter1_f_96_551)">
-          <path
-            d="M851.044 369.351C752.455 544.011 1065.22 491.814 1204.86 461.831C1423.94 430.905 1578.37 226.944 1596.02 151.022C1613.67 75.1007 960.082 81.0777 1176.41 202.619C1392.73 324.161 1367.44 346.444 1329.28 358.513C1291.12 370.583 949.632 194.691 851.044 369.351Z"
-            fill="#00F0FF"
-            class="background__figure background__figure--1"
-          />
-          <path
-            d="M704.578 229.344C611.122 1.96467 979.833 -0.466778 1077.14 50.6308C1185.71 107.638 1345 -129.665 1378.57 -37.2977C1412.14 55.0696 1352.25 552.836 1134.6 293.403C916.943 33.9709 798.033 456.724 704.578 229.344Z"
-            fill="#0500FF"
-            class="background__figure background__figure--2"
-          />
-          <path
-            d="M308.695 -34.5904C205.178 -218.176 485.592 -93.8253 568.354 -35.2315C656.773 27.3679 605.865 177.122 646.789 230.86C687.712 284.597 147.814 322.957 267.75 178.683C387.685 34.4101 412.211 148.995 308.695 -34.5904Z"
-            fill="#BD00FF"
-            class="background__figure background__figure--3"
-          />
-        </g>
-        <defs>
-          <filter
-            id="filter0_f_96_551"
-            x="0.323242"
-            y="-381.042"
-            width="1846.05"
-            height="1124.15"
-            filterUnits="userSpaceOnUse"
-            color-interpolation-filters="sRGB"
+      <div class="background__figures">
+        <div class="background__primary">
+          <svg
+            width="400"
+            height="411"
+            viewBox="0 0 400 411"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_1"
           >
-            <feFlood flood-opacity="0" result="BackgroundImageFix" />
-            <feBlend
-              mode="normal"
-              in="SourceGraphic"
-              in2="BackgroundImageFix"
-              result="shape"
+            <path
+              d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+              fill="#BD00FF"
             />
-            <feGaussianBlur
-              stdDeviation="125"
-              result="effect1_foregroundBlur_96_551"
-            />
-          </filter>
-          <filter
-            id="filter1_f_96_551"
-            x="0.323242"
-            y="-381.042"
-            width="1846.05"
-            height="1124.15"
-            filterUnits="userSpaceOnUse"
-            color-interpolation-filters="sRGB"
+          </svg>
+          <svg
+            width="699"
+            height="427"
+            viewBox="0 0 699 427"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_2"
           >
-            <feFlood flood-opacity="0" result="BackgroundImageFix" />
-            <feBlend
-              mode="normal"
-              in="SourceGraphic"
-              in2="BackgroundImageFix"
-              result="shape"
+            <path
+              d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+              fill="#0500FF"
             />
-            <feGaussianBlur
-              stdDeviation="125"
-              result="effect1_foregroundBlur_96_551"
+          </svg>
+          <svg
+            width="765"
+            height="393"
+            viewBox="0 0 765 393"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_3"
+          >
+            <path
+              d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+              fill="#00F0FF"
             />
-          </filter>
-        </defs>
-      </svg>
+          </svg>
+        </div>
+        <div class="background__secondary">
+          <svg
+            width="400"
+            height="411"
+            viewBox="0 0 400 411"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_1"
+          >
+            <path
+              d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+              fill="#BD00FF"
+            />
+          </svg>
+          <svg
+            width="699"
+            height="427"
+            viewBox="0 0 699 427"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_2"
+          >
+            <path
+              d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+              fill="#0500FF"
+            />
+          </svg>
+          <svg
+            width="765"
+            height="393"
+            viewBox="0 0 765 393"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="background__figure background__figure_3"
+          >
+            <path
+              d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+              fill="#00F0FF"
+            />
+          </svg>
+        </div>
+      </div>
     </div>
     <header class="header">
       <div class="container">
