add animation gradients

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Open Movie API</title>
   </head>
   <body>
+    <canvas class="noise"></canvas>
+
     <div class="background">
-      <canvas class="background__noise"></canvas>
       <div class="background__figures">
         <div class="background__primary">
           <svg
@@ -75,11 +76,13 @@
             width="765"
             height="393"
             viewBox="0 0 765 393"
+            fill="none"
             xmlns="http://www.w3.org/2000/svg"
             class="background__figure background__figure_3"
           >
             <path
               d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+              fill="#00F0FF"
             />
           </svg>
         </div>
@@ -226,8 +229,8 @@
                 </ul>
                 <a href="#" class="tariffs-item__button link-gradient">
                   <div class="overlay">
-                    <span>Беслпатное демо</span>
-                    <span>Беслпатное демо</span>
+                    <span>Бесплатное демо</span>
+                    <span>Бесплатное демо</span>
                   </div>
                 </a>
               </div>
