add support section

--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@
             </div>
           </div>
         </section>
+        <section class="support">
+          <h2 class="support__title section-title">Поддержка</h2>
+          <p class="support__description section-body">
+            Мы не оставим Вас без поддержки, сотрудники openmovieapi.dev онлайн
+            24/7. Готовы решить практически любой ваш вопрос, а также -
+            подсказать, помочь, обновить, загрузить, даже доработать код для
+            корректной работы с API kinopoisk.dev.
+          </p>
+        </section>
         <section class="free">
           <div class="free-inner">
             <h2 class="inline-title section-title">Хотите начать бесплатно?</h2>
