--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   </head>
   <body>
     <canvas class="noise"></canvas>
-
     <div class="background">
-      <div class="background__figures">
+      <div class="background__figures background__figures_header_scene">
         <div class="background__primary">
           <svg
             width="400"
@@ -76,13 +75,11 @@
             width="765"
             height="393"
             viewBox="0 0 765 393"
-            fill="none"
             xmlns="http://www.w3.org/2000/svg"
             class="background__figure background__figure_3"
           >
             <path
               d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
-              fill="#00F0FF"
             />
           </svg>
         </div>
@@ -119,6 +116,80 @@
           </a>
         </section>
         <section class="example">
+          <div class="background example__background">
+            <div class="background__figures background__figures_example_scene">
+              <div class="background__primary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+              <div class="background__secondary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
           <h2 class="section-title">Пример работы</h2>
           <div class="example-block section-block">
             <div class="example-top">
@@ -265,6 +336,152 @@
           </div>
         </section>
         <section class="support">
+          <div class="background support__background">
+            <div class="background__figures background__figures_support_scene">
+              <div class="background__primary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+              <div class="background__secondary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="background__figures background__figures_support_scene">
+              <div class="background__primary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+              <div class="background__secondary">
+                <svg
+                  width="400"
+                  height="411"
+                  viewBox="0 0 400 411"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_1"
+                >
+                  <path
+                    d="M58.6947 96.481C-44.8216 -87.1044 235.592 37.2461 318.354 95.84C406.773 158.439 355.865 308.193 396.789 361.931C437.712 415.669 -102.186 454.028 17.7496 309.755C137.685 165.482 162.211 280.067 58.6947 96.481Z"
+                  />
+                </svg>
+                <svg
+                  width="699"
+                  height="427"
+                  viewBox="0 0 699 427"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_2"
+                >
+                  <path
+                    d="M15.5774 288.416C-77.8779 61.0362 290.833 58.6048 388.142 109.702C496.706 166.71 656.003 -70.5935 689.571 21.7738C723.138 114.141 663.254 611.907 445.598 352.475C227.943 93.0425 109.033 515.795 15.5774 288.416Z"
+                  />
+                </svg>
+                <svg
+                  width="765"
+                  height="393"
+                  viewBox="0 0 765 393"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="background__figure background__figure_3"
+                >
+                  <path
+                    d="M19.0435 268.423C-79.5447 443.082 233.216 390.885 372.858 360.902C591.939 329.976 746.373 126.016 764.022 50.0939C781.671 -25.8278 128.082 -19.8508 344.408 101.691C560.735 223.232 535.439 245.516 497.281 257.585C459.124 269.654 117.632 93.7629 19.0435 268.423Z"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
           <h2 class="support__title section-title">Поддержка</h2>
           <p class="support__description section-body">
             Мы не оставим Вас без поддержки, сотрудники openmovieapi.dev онлайн
