add arrow img in .link-gradient in example section

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
               <a href="#" class="link-gradient"
                 ><div class="overlay">
                   <!-- временное решение -->
-                  <span>Трейлер ---></span>
-                  <span>Трейлер ---></span>
+                  <span>Трейлер <img src="img/arrow.svg" alt=">"></span>
+                  <span>Трейлер <img src="img/arrow.svg" alt=">"></span>
                 </div></a
               >
             </div>
