--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-    <title>Open Movie API</title>
-  </head>
-  <body>
-    <canvas class="noise"></canvas>
-    <div class="background">
+		<title>Open Movie API</title>
+	</head>
+	<body>
+		<canvas class="noise"></canvas>
+		<!-- временно <div class="background">
       <div class="background__figures background__figures_header_scene">
         <div class="background__primary">
           <svg
@@ -84,39 +84,46 @@
           </svg>
         </div>
       </div>
-    </div>
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <a href="#" class="logo link-opacity">
-            <img src="img/logo.svg" alt="Open Movie API" />
-          </a>
-          <nav class="header-nav">
-            <a href="#" class="header-nav__link link-underline">Пример API</a>
-            <a href="#" class="header-nav__link link-underline">Тарифы</a>
-            <a href="#" class="header-nav__link link-underline">Поддержка</a>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <main class="main">
-      <div class="container">
-        <section class="hero">
-          <h1 class="hero-title">Свободная база фильмов</h1>
-          <p class="section-body hero-description">
-            Получайте максимум данных о фильмах, сериалах, мультфильмах, тв-шоу,
-            аниме, актерах и режиссерах максимально быстро. Наше api содержит
-            данные из таких баз как: kinopoisk, tmbd, imdb
-          </p>
-          <a href="#" class="link-gradient">
-            <div class="overlay">
-              <span>Подключить</span>
-              <span>Подключить</span>
-            </div>
-          </a>
-        </section>
-        <section class="example">
-          <div class="background example__background">
+    </div> -->
+		<header class="header">
+			<div class="container">
+				<div class="header-inner">
+					<a href="#" class="logo link-opacity">
+						<img src="img/logo.svg" alt="Open Movie API" />
+					</a>
+					<nav class="header-nav">
+						<a href="#" class="header-nav__link link-underline"
+							>Пример API</a
+						>
+						<a href="#" class="header-nav__link link-underline"
+							>Тарифы</a
+						>
+						<a href="#" class="header-nav__link link-underline"
+							>Поддержка</a
+						>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<main class="main">
+			<div class="container">
+				<section class="hero">
+					<h1 class="hero-title">Свободная база фильмов</h1>
+					<p class="section-body hero-description">
+						Получайте максимум данных о фильмах, сериалах,
+						мультфильмах, тв-шоу, аниме, актерах и режиссерах
+						максимально быстро. Наше api содержит данные из таких
+						баз как: kinopoisk, tmbd, imdb
+					</p>
+					<a href="#" class="hero__link link-gradient">
+						<div class="overlay">
+							<span>Подключить</span>
+							<span>Подключить</span>
+						</div>
+					</a>
+				</section>
+				<section class="example">
+          <!-- временно <div class="background example__background">
             <div class="background__figures background__figures_example_scene">
               <div class="background__primary">
                 <svg
@@ -189,15 +196,15 @@
                 </svg>
               </div>
             </div>
-          </div>
+          </div> -->
           <h2 class="section-title">Пример работы</h2>
           <div class="example-block section-block">
             <div class="example-top">
               <h3 class="example-top__title section-h3">Однажды в голливуде</h3>
               <ul class="example-top__list">
                 <li>ID: <span>1209712</span></li>
-                <li>Рейтинг КП: <span>5.7</span></li>
-                <li>Рейтинг IMDB: <span>5.3</span></li>
+                <li><div class="mobile-hidden">Рейтинг</div> КП: <span>5.7</span></li>
+                <li><div class="mobile-hidden">Рейтинг</div> IMDB: <span>5.3</span></li>
               </ul>
             </div>
             <div class="example-block__content">
@@ -233,9 +240,8 @@
                 Рик Далтон и его дублер Клифф Бут пытаются найти свое место в
                 стремительно меняющемся мире киноиндустрии.
               </p>
-              <a href="#" class="link-gradient"
+              <a href="#" class="example-block__link link-gradient"
                 ><div class="overlay">
-                  <!-- временное решение -->
                   <span>Трейлер <img src="img/arrow.svg" alt=">"></span>
                   <span>Трейлер <img src="img/arrow.svg" alt=">"></span>
                 </div></a
@@ -243,100 +249,125 @@
             </div>
           </div>
         </section>
-        <section class="tariffs">
-          <h2 class="section-title">Тарифы</h2>
-          <p class="tariffs-description section-body">
-            За 3 года разработки API стало понятно, что он используется для
-            бизнеса и для обучения. Чтобы стать более удобными теперь только 2
-            самых нужных тарифа.
-          </p>
-          <div class="tariffs-cards">
-            <div class="tariffs-item">
-              <div class="tariffs-item__overlay">
-                <h3 class="tariffs-item__title section-h3">Обучение</h3>
-                <p class="tariffs-item__description section-body">
-                  Это тариф создан для некомерческого использования API
-                  kinopoisk, tmdb и imdb с целью обучения программированию.
-                  Идеален для студентов :)
-                </p>
-                <ul class="tariffs-item__list">
-                  <li>
-                    Доступ ко всем методам API кинопоиска (3000 запросов в
-                    сутки)
-                  </li>
-                  <li>Доступ к документации</li>
-                  <li>Доступ исходному коду API</li>
-                  <li>Нельзя использовать в приватных репозиториях</li>
-                  <li>Тех. поддержка в чате @dev_to_dev</li>
-                  <li>&nbsp;</li>
-                </ul>
-                <a
-                  href="#"
-                  class="tariffs-item__button link-gradient without-gradient"
-                >
-                  <div class="overlay">
-                    <span>Получить токен</span>
-                    <span>Получить токен</span>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="tariffs-item tariffs-item-popular">
-              <div class="tariffs-item__overlay">
-                <h3 class="tariffs-item__title section-h3">Бизнес</h3>
-                <p class="tariffs-item__description section-body">
-                  Для этого тарифа доступен тестовый период, который позволит
-                  вам не платить за апи во время эксперементов. Поумолчанию этот
-                  период длится 2 недели c момента активации тарифа, после 2000
-                  р. в месяц.
-                </p>
-                <ul class="tariffs-item__list">
-                  <li>Безлимитный доступ ко всем методам API</li>
-                  <li>Доступ к документации</li>
-                  <li>Доступ исходному коду API</li>
-                  <li>Возможность купить дамп базы</li>
-                  <li>Возможность развернуть свой личный инстанс API</li>
-                  <li>Оперативная тех. поддержка</li>
-                </ul>
-                <a href="#" class="tariffs-item__button link-gradient">
-                  <div class="overlay">
-                    <span>Бесплатное демо</span>
-                    <span>Бесплатное демо</span>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="community">
-          <h2 class="section-title">Сообщество</h2>
-          <div class="community-block section-block">
-            <div class="community-item">
-              <h3 class="community-item__title section-h3">
-                <img src="img/tg-icon.svg" alt="tg" />
-                Telegram
-              </h3>
-              <p class="community-item__description section-body">
-                Присоединяйся в наше сообщество в telegram и получай
-                круглосуточную помощь
-              </p>
-              <a href="#" class="community-item__link">Присоединиться</a>
-            </div>
-            <div class="community-item">
-              <h3 class="community-item__title section-h3">
-                <img src="img/github-icon.svg" alt="github" />
-                Github
-              </h3>
-              <p class="community-item__description section-body">
-                Присоединяйся в наше сообщество в telegram и получай
-                круглосуточную помощь
-              </p>
-              <a href="#" class="community-item__link">Присоединиться</a>
-            </div>
-          </div>
-        </section>
-        <section class="support">
-          <div class="background support__background">
+				<section class="tariffs">
+					<h2 class="section-title">Тарифы</h2>
+					<p class="tariffs-description section-body">
+						За 3 года разработки API стало понятно, что он
+						используется для бизнеса и для обучения. Чтобы стать
+						более удобными теперь только 2 самых нужных тарифа.
+					</p>
+					<div class="tariffs-cards">
+						<div class="tariffs-item">
+							<div class="tariffs-item__overlay">
+								<h3 class="tariffs-item__title section-h3">
+									Обучение
+								</h3>
+								<p
+									class="tariffs-item__description section-body"
+								>
+									Это тариф создан для некомерческого
+									использования API kinopoisk, tmdb и imdb с
+									целью обучения программированию. Идеален для
+									студентов :)
+								</p>
+								<ul class="tariffs-item__list">
+									<li>
+										Доступ ко всем методам API кинопоиска
+										(3000 запросов в сутки)
+									</li>
+									<li>Доступ к документации</li>
+									<li>Доступ исходному коду API</li>
+									<li>
+										Нельзя использовать в приватных
+										репозиториях
+									</li>
+									<li>Тех. поддержка в чате @dev_to_dev</li>
+									<li class="mobile-hidden">&nbsp;</li>
+								</ul>
+								<a
+									href="#"
+									class="tariffs-item__button link-gradient without-gradient"
+								>
+									<div class="overlay">
+										<span>Получить токен</span>
+										<span>Получить токен</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="tariffs-item tariffs-item-popular">
+							<div class="tariffs-item__overlay">
+								<h3 class="tariffs-item__title section-h3">
+									Бизнес
+								</h3>
+								<p
+									class="tariffs-item__description section-body"
+								>
+									Для этого тарифа доступен тестовый период,
+									который позволит вам не платить за апи во
+									время эксперементов. Поумолчанию этот период
+									длится 2 недели c момента активации тарифа,
+									после 2000 р. в месяц.
+								</p>
+								<ul class="tariffs-item__list">
+									<li>
+										Безлимитный доступ ко всем методам API
+									</li>
+									<li>Доступ к документации</li>
+									<li>Доступ исходному коду API</li>
+									<li>Возможность купить дамп базы</li>
+									<li>
+										Возможность развернуть свой личный
+										инстанс API
+									</li>
+									<li>Оперативная тех. поддержка</li>
+								</ul>
+								<a
+									href="#"
+									class="tariffs-item__button link-gradient"
+								>
+									<div class="overlay">
+										<span>Бесплатное демо</span>
+										<span>Бесплатное демо</span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="community">
+					<h2 class="section-title">Сообщество</h2>
+					<div class="community-block section-block">
+						<div class="community-item">
+							<h3 class="community-item__title section-h3">
+								<img src="img/tg-icon.svg" alt="tg" />
+								Telegram
+							</h3>
+							<p class="community-item__description section-body">
+								Присоединяйся в наше сообщество в telegram и
+								получай круглосуточную помощь
+							</p>
+							<a href="#" class="community-item__link"
+								>Присоединиться</a
+							>
+						</div>
+						<div class="community-item">
+							<h3 class="community-item__title section-h3">
+								<img src="img/github-icon.svg" alt="github" />
+								Github
+							</h3>
+							<p class="community-item__description section-body">
+								Присоединяйся в наше сообщество в telegram и
+								получай круглосуточную помощь
+							</p>
+							<a href="#" class="community-item__link"
+								>Присоединиться</a
+							>
+						</div>
+					</div>
+				</section>
+				<section class="support">
+					<!-- временно <div class="background support__background">
             <div class="background__figures background__figures_support_scene">
               <div class="background__primary">
                 <svg
@@ -481,58 +512,87 @@
                 </svg>
               </div>
             </div>
-          </div>
-          <h2 class="support__title section-title">Поддержка</h2>
-          <p class="support__description section-body">
-            Мы не оставим Вас без поддержки, сотрудники openmovieapi.dev онлайн
-            24/7. Готовы решить практически любой ваш вопрос, а также -
-            подсказать, помочь, обновить, загрузить, даже доработать код для
-            корректной работы с API kinopoisk.dev.
-          </p>
-        </section>
-        <section class="free">
-          <div class="free-inner">
-            <h2 class="inline-title section-title">Хотите начать бесплатно?</h2>
-            <a href="#" class="tariffs-item__button link-gradient">
-              <div class="overlay">
-                <span>Подключить</span>
-                <span>Подключить</span>
-              </div>
+          </div> -->
+					<h2 class="support__title section-title">Поддержка</h2>
+					<p class="support__description section-body">
+						Мы не оставим Вас без поддержки, сотрудники
+						openmovieapi.dev онлайн 24/7. Готовы решить практически
+						любой ваш вопрос, а также - подсказать, помочь,
+						обновить, загрузить, даже доработать код для корректной
+						работы с API kinopoisk.dev.
+					</p>
+				</section>
+				<section class="free">
+					<div class="free-inner">
+						<h2 class="free-title inline-title section-title">
+							Хотите начать бесплатно?
+						</h2>
+						<a href="#" class="tariffs-item__button link-gradient">
+							<div class="overlay">
+								<span>Подключить</span>
+								<span>Подключить</span>
+							</div>
+						</a>
+					</div>
+				</section>
+			</div>
+		</main>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-inner">
+					<div class="footer-block">
+						<a href="#" class="logo link-opacity">
+							<img src="img/logo.svg" alt="Open Movie API" />
+						</a>
+						<a
+							href="mdwit.t.me"
+							class="link-opacity opacity-color section-body mobile-hidden"
+							>@MDWIT</a
+						>
+						<span class="opacity-color section-body mobile-hidden"
+							>design by isakon</span
+						>
+					</div>
+					<nav class="footer-block footer-nav">
+						<a
+							href="#"
+							class="link-opacity footer-item section-body"
+							>Пример API</a
+						>
+						<a
+							href="#"
+							class="link-opacity footer-item section-body"
+							>Тарифы</a
+						>
+						<a
+							href="#"
+							class="link-opacity footer-item section-body"
+							>Поддержка</a
+						>
+					</nav>
+					<div class="footer-block">
+						<a
+							href="#"
+							class="link-opacity footer-item section-body"
+							>support@openmovie.api</a
+						>
+						<a
+							href="#"
+							class="link-opacity footer-item section-body"
+							>Github</a
+						>
+					</div>
+					<div class="footer-block footer-block__mobile">
+						<a href="mdwit.t.me" class="link-opacity opacity-color section-body">
+              @MDWIT
             </a>
-          </div>
-        </section>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-inner">
-          <div class="footer-block">
-            <a href="#" class="logo link-opacity">
-              <img src="img/logo.svg" alt="Open Movie API" />
-            </a>
-            <a href="mdwit.t.me" class="link-opacity opacity-color section-body"
-              >@MDWIT</a
-            >
-            <span class="opacity-color section-body">design by isakon</span>
-          </div>
-          <div class="footer-block">
-            <a href="#" class="link-opacity footer-item section-body"
-              >Пример API</a
-            >
-            <a href="#" class="link-opacity footer-item section-body">Тарифы</a>
-            <a href="#" class="link-opacity footer-item section-body"
-              >Поддержка</a
-            >
-          </div>
-          <div class="footer-block">
-            <a href="#" class="link-opacity footer-item section-body"
-              >support@openmovie.api</a
-            >
-            <a href="#" class="link-opacity footer-item section-body">Github</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="js/main.js"></script>
-  </body>
+						<span class="opacity-color section-body">
+              design by isakon
+            </span>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<script src="js/main.js"></script>
+	</body>
 </html>
